<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/med_background"
    tools:context=".Vitals">

    <TextView
        android:id="@+id/Vitals"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:fontFamily="sans-serif"
        android:text="@string/vitals"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </TextView>


    <TextView
        android:id="@+id/User"
        android:layout_width="319dp"
        android:layout_height="71dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/user_name"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Vitals"
        tools:ignore="MissingConstraints">

    </TextView>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/pulse"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User" />

    <TextView
        android:id="@+id/Data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:focusable="false"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/Butt"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:fontFamily="sans-serif"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        tools:ignore="MissingConstraints">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>