<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/med_background"
    tools:context=".GoodBye">

    <TextView
        android:id="@+id/Goodbye"
        android:layout_width="1868dp"
        android:layout_height="114dp"
        android:layout_marginTop="72dp"
        android:fontFamily="sans-serif"
        android:text="@string/further_instructions"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/User"
        android:layout_width="311dp"
        android:layout_height="75dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/user_name"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Goodbye">

    </TextView>

    <Button
        android:id="@+id/Butt"
        android:layout_width="222dp"
        android:layout_height="97dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/red"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Goodbye"
        app:layout_constraintVertical_bias="1.0">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>